# llm-chats

./: .gitignore  LICENSE  README.md  env.example  main.py  offline_start.py  pyproject.toml  run.py  setup_guide.py  test_doubao_endpoint.py
docs/: 2025.06.29.md  design.md  todo.md
docs/changelog/: 2025.07.05.md  2025.07.06.md  2025.07.12.md
src/llm_chats/: __init__.py  app.py  client.py  config.py  conversation.py  file_processor.py  model_updater.py  summarizer.py  ui_components.py
